fix padding and overflow style

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -3,6 +3,13 @@
     width:100%;
 }
 
+.carousel-caption{
+    padding:20px;
+    height: 250px;
+    overflow: auto;
+    border: 3px white solid;
+}
+
 #app1>div:nth-child(1)>div.bg{
     background:url(../images/wheat.png) repeat-x;
 }
@@ -26,3 +33,27 @@
 #app1>div:nth-child(6)>div.bg{
     background:url(../images/skyscraper.png) repeat-x;
 }
+
+
+/* scrollbar style start */
+
+/*滚动条样式*/
+.carousel-caption::-webkit-scrollbar{
+    width: 6px;
+    height: 16px;
+    background-color: #f5f5f5;
+}
+/*定义滚动条的轨道，内阴影及圆角*/
+.carousel-caption::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    border-radius: 20px;
+    background-color: #f1f2f7;
+}
+/*定义滑块，内阴影及圆角*/
+.carousel-caption::-webkit-scrollbar-thumb{
+    height: 20px;
+    border-radius: 20px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #212933;
+}
+/* scrollbar style end */
